--- a/source/assets/css/_type.scss
+++ b/source/assets/css/_type.scss
@@ -162,10 +162,10 @@
         text-decoration: none;
       }
       &:not(.btn):not(.blog-headline):not(.project-box-action--link):not(.site-nav-link):not(.masthead-logo):not(.blog-list-link):not(.about-timeline-year-select-link):not(.site-nav-subnav-link):not(.border-none){
-        border-bottom: 3px solid $color-red;
-        padding-bottom: 3px;
+        border-bottom: 2px solid $color-red;
+        padding-bottom: 0px;
         &:hover {
-          border-bottom: 3px solid $color-red-light;
+          border-bottom: 2px solid $color-red-light;
         }
         &.link-white {
           color: $color-white;
